showing the current prompt name in the chatgpt window. fixes #20

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -378,5 +378,9 @@
   "importPrompts_invalidPrompts": {
     "message": "Die Datei, die Sie importieren möchten, enthält keine gültigen Prompts.",
     "description": ""
+  },
+  "currently_used_prompt": {
+    "message": "Derzeit verwendeter Prompt-Name",
+    "description": ""
   }
 }
