--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -382,5 +382,9 @@
   "currently_used_prompt": {
     "message": "Derzeit verwendeter Prompt-Name",
     "description": ""
+  },
+  "customprompts_form_label_define_response_lang": {
+    "message": "Definieren Sie die Antwortsprache im Prompt.",
+    "description": ""
   }
 }
