--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -386,5 +386,21 @@
   "customprompts_form_label_define_response_lang": {
     "message": "Definisci la lingua di risposta nel prompt.",
     "description": ""
+  },
+  "prefs_Connection_type": {
+  "message": "Tipo di connessione",
+  "description": ""
+  },
+  "prefs_Connection_type_ChatGTP_Web": {
+    "message": "Interfaccia Web ChatGTP",
+    "description": ""
+  },
+  "prefs_Connection_type_ChatGTP_API": {
+    "message": "API OpenAI per ChatGTP",
+    "description": ""
+  },
+  "prefs_prefs_ChatGPT_API_Key": {
+    "message": "Chiave API ChatGPT",
+    "description": ""
   }
 }
