--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -399,7 +399,7 @@
     "message": "API OpenAI per ChatGTP",
     "description": ""
   },
-  "prefs_prefs_ChatGPT_API_Key": {
+  "prefs_ChatGPT_API_Key": {
     "message": "Chiave API ChatGPT",
     "description": ""
   }
