i18n strings added. see #92

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -402,5 +402,13 @@
   "prefs_ChatGPT_API_Key": {
     "message": "ChatGPT API-Schlüssel",
     "description": ""
+  },
+    "ChatGPT_Models": {
+    "message": "ChatGPT-Modelle",
+    "description": ""
+  },
+  "ChatGPT_Models_Fetch": {
+    "message": "Liste der ChatGPT-Modelle aktualisieren",
+    "description": ""
   }
 }
