--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -402,5 +402,13 @@
   "prefs_ChatGPT_API_Key": {
     "message": "Chiave API ChatGPT",
     "description": ""
+  },
+    "ChatGPT_Models": {
+    "message": "Modelli ChatGPT",
+    "description": ""
+  },
+  "ChatGPT_Models_Fetch": {
+    "message": "Aggiorna l'elenco dei modelli ChatGPT",
+    "description": ""
   }
 }
