giving error to user and console on model fetch if needed. see #92

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -406,10 +406,13 @@
   "ChatGPT_Models": {
     "message": "ChatGPT Models",
     "description": ""
-  }
-  ,
+  },
   "ChatGPT_Models_Fetch": {
     "message": "Update ChatGPT Models list",
+    "description": ""
+  },
+  "ChatGPT_Models_Error_fetching": {
+    "message": "Error trying to fetch ChatGPT models",
     "description": ""
   }
 }
