--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -410,5 +410,13 @@
   "ChatGPT_Models_Fetch": {
     "message": "Liste der ChatGPT-Modelle aktualisieren",
     "description": ""
+  },
+  "ChatGPT_Models_Error_fetching": {
+  "message": "Fehler beim Abrufen der ChatGPT-Modelle",
+  "description": ""
+  },
+  "ChatGPT_Models_Loading": {
+    "message": "Laden...",
+    "description": ""
   }
 }
