--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -410,5 +410,13 @@
   "ChatGPT_Models_Fetch": {
     "message": "Mettre à jour la liste des modèles ChatGPT",
     "description": ""
+  },
+  "ChatGPT_Models_Error_fetching": {
+  "message": "Erreur lors de la récupération des modèles ChatGPT",
+  "description": ""
+  },
+  "ChatGPT_Models_Loading": {
+    "message": "Chargement...",
+    "description": ""
   }
 }
