--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -424,7 +424,7 @@
     "description": ""
   },
   "chatgpt_empty_apikey": {
-    "message": "You've not added an API Key a model for the ChatGPT API. Please insert one in the options page.",
+    "message": "You've not added an API Key for the ChatGPT API. Please insert one in the options page.",
     "description": ""
   },
   "chatgpt_empty_model": {
