--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -430,5 +430,13 @@
   "chatgpt_empty_model": {
     "message": "Vous n'avez pas choisi de modèle pour l'API ChatGPT. Veuillez en choisir un sur la page des options.",
     "description": ""
+  },
+  "chagtp_api_send_button": {
+    "message": "Utilisation du modèle",
+    "description": ""
+  },
+  "chagtp_api_connecting": {
+    "message": "Tentative de connexion à OpenAI ChatGPT en utilisant la clé API fournie...",
+    "description": ""
   }
 }
