--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -430,5 +430,13 @@
   "chatgpt_empty_model": {
     "message": "Non hai scelto un modello per l'API di ChatGPT. Per favore, scegline uno nella pagina delle opzioni.",
     "description": ""
+  },
+  "chagtp_api_send_button": {
+    "message": "Modello utilizzato",
+    "description": ""
+  },
+  "chagtp_api_connecting": {
+    "message": "Tentativo di connessione a OpenAI ChatGPT utilizzando la chiave API fornita...",
+    "description": ""
   }
 }
