--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -204,7 +204,7 @@
     "description": ""
   },
   "chatgpt_win_job_completed": {
-    "message": "Completed!",
+    "message": "Completed! Select the text you want to use and click the button.",
     "description": ""
   },
   "chatgpt_win_get_answer": {
