--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -204,11 +204,11 @@
     "description": ""
   },
   "chatgpt_win_job_completed": {
-    "message": "Abgeschlossen!",
+    "message": "Abgeschlossen! Text auswählen und auf die Schaltfläche klicken.",
     "description": ""
   },
   "chatgpt_win_get_answer": {
-    "message": "Letzte Antwort verwenden",
+    "message": "Verwenden Sie die ausgewählte Antwort.",
     "description": ""
   },
   "chatgpt_win_close": {
