ollama options added. see #79

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -411,7 +411,7 @@
     "message": "Fehler beim Abrufen der ChatGPT-Modelle",
     "description": ""
   },
-  "ChatGPT_Models_Loading": {
+  "Loading": {
     "message": "Laden...",
     "description": ""
   },
