ollama_api: getting models list. see #79

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -462,5 +462,9 @@
   "Ollama_Models_Error_fetching": {
     "message": "Error trying to fetch Ollama models",
     "description": ""
+  },
+  "Ollama_Models_Error_NoModels": {
+    "message": "No models found",
+    "description": ""
   }
 }
