added the call to ollama and renamed the action  from chatgpt_send to api_send when using an API. see #79

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -466,5 +466,13 @@
   "Ollama_Models_Error_NoModels": {
     "message": "No models found",
     "description": ""
+  },
+  "ollama_empty_host": {
+    "message": "You've not added an Host Address for the Ollama API. Please insert one in the options page.",
+    "description": ""
+  },
+  "ollama_empty_model": {
+    "message": "You've not choosen a model for the Ollama API. Please choose one in the options page.",
+    "description": ""
   }
 }
