--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -431,7 +431,7 @@
     "message": "Modell wird verwendet",
     "description": ""
   },
-  "chagtp_api_connecting": {
+  "chagpt_api_connecting": {
     "message": "Versucht, eine Verbindung zu OpenAI ChatGPT mit dem angegebenen API-Schlüssel herzustellen...",
     "description": ""
   }
