--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -431,7 +431,7 @@
     "message": "Using model",
     "description": ""
   },
-  "chagtp_api_connecting": {
+  "chagpt_api_connecting": {
     "message": "Will attempt to connect to OpenAI ChatGPT using the API key provided...",
     "description": ""
   },
