--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -474,5 +474,9 @@
   "ollama_empty_model": {
     "message": "You've not choosen a model for the Ollama API. Please choose one in the options page.",
     "description": ""
+  },
+  "ollama_api_connecting": {
+    "message": "Will attempt to connect to the Ollama Local Server using the host",
+    "description": ""
   }
 }
