stop button added. see #113. some info about the model are now dinamic

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -432,7 +432,7 @@
     "description": ""
   },
   "chagpt_api_connecting": {
-    "message": "Versucht, eine Verbindung zu OpenAI ChatGPT mit dem angegebenen API-Schlüssel herzustellen...",
+    "message": "Versucht, eine Verbindung zu OpenAI ChatGPT mit dem angegebenen API-Schlüssel herzustellen",
     "description": ""
   }
 }
