--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -432,7 +432,7 @@
     "description": ""
   },
   "chagpt_api_connecting": {
-    "message": "Will attempt to connect to OpenAI ChatGPT using the API key provided...",
+    "message": "Will attempt to connect to OpenAI ChatGPT using the API key provided",
     "description": ""
   },
   "Debug": {
@@ -477,6 +477,10 @@
   },
   "ollama_api_connecting": {
     "message": "Will attempt to connect to the Ollama Local Server using the host",
+    "description": ""
+  },
+  "andModel": {
+    "message": "and model",
     "description": ""
   }
 }
