--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -432,7 +432,7 @@
     "description": ""
   },
   "chagpt_api_connecting": {
-    "message": "Tentative de connexion à OpenAI ChatGPT en utilisant la clé API fournie...",
+    "message": "Tentative de connexion à OpenAI ChatGPT en utilisant la clé API fournie",
     "description": ""
   }
 }
