added ollama host example

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -494,5 +494,9 @@
   "WaitingServerReponse": {
     "message": "Waiting for the server response",
     "description": ""
+  },
+  "prefs_Ollama_Host_Info": {
+    "message": "Something like",
+    "description": ""
   }
 }
