Added also Ollama to extensionDescription

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Verwenden Sie ChatGPT, um Ihre E-Mails zu verbessern!",
+    "message": "Verwende ChatGPT oder Ollama, um deine E-Mails zu verbessern!",
     "description": "Beschreibung der Erweiterung."
   },
   "menu_title": {
