--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Utilisez ChatGPT pour améliorer vos emails !",
+    "message": "Utilise ChatGPT ou Ollama pour améliorer tes e-mails !",
     "description":  "Description de l'extension."
   },
   "menu_title": {
