--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Usa ChatGPT per migliorare le tue email!",
+    "message": "Usa ChatGPT o Ollama per migliorare le tue email!",
     "description": "Description of the extension."
   },
   "menu_title": {
