--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -284,7 +284,7 @@
     "description": ""
   },
   "prefs_OptionText_default_chatgpt_lang": {
-    "message": "Default language for ChatGPT responses",
+    "message": "Default language for the responses",
     "description": ""
   },
   "prefs_OptionText_reply_all": {
