--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -284,7 +284,7 @@
     "description": ""
   },
   "prefs_OptionText_default_chatgpt_lang": {
-    "message": "Langue par défaut pour les réponses de ChatGPT",
+    "message": "Langue par défaut pour les réponses",
     "description": ""
   },
   "prefs_OptionText_reply_all": {
