--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -320,7 +320,7 @@
     "description": ""
   },
   "prefsInfoDesc_2": {
-    "message": "To use the ChatGPT API, you need an OpenAI ChatGPT API Key and must choose a model. If you fail to do so, ThunderAI will fall back to using the ChatGPT web interface.",
+    "message": "To use the ChatGPT API, you need an OpenAI ChatGPT API Key and must choose a model.",
     "description": ""
   },
   "prefsInfoDesc_3": {
