--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -324,7 +324,7 @@
     "description": ""
   },
   "prefsInfoDesc_3": {
-    "message": " ",
+    "message": "Pour utiliser l'intégration avec Ollama, vous devez configurer un serveur Ollama local. Une fois que le serveur est en marche, entrez son adresse dans le champ prévu à cet effet dans l'application. Pour garantir une communication adéquate entre l'application et le serveur Ollama, n'oubliez pas de définir OLLAMA_ORIGINS=moz-extension://*.",
     "description": ""
   },
   "prefsDonation_1": {
