--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -476,7 +476,7 @@
     "description": ""
   },
   "ollama_api_connecting": {
-    "message": "Will attempt to connect to the Ollama Local Server using the host",
+    "message": "Attempting to connect to the Ollama Local Server using the host",
     "description": ""
   },
   "andModel": {
