--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -432,7 +432,7 @@
     "description": ""
   },
   "chagpt_api_connecting": {
-    "message": "Will attempt to connect to OpenAI ChatGPT using the API key provided",
+    "message": "Attempting to connect to OpenAI ChatGPT using the API key provided",
     "description": ""
   },
   "Debug": {
